[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.210"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "signal"] }
reqwest-oauth1 = "0.2.4"
reqwest = { version = "0.11.10", features = ["json", "multipart"] }
oauth1-request = "0.3.3"
eyre = "0.6.12"
serde_urlencoded = "0.7.1"
log = "0.4.22"
serde_json = "1.0.132"
serde_with = "3.11.0"
axum = "0.7.7"
tower-http = {version = "0.5.2", features =["cors"]}
dotenv = "0.15.0"
egg-mode = "0.16.1"
